// See Makefile for the logic that generates this
// Protoc errors imply this file is being generated incorrectly
// Swift compile errors are probably bugs in protoc-gen-swift
syntax = "proto3";
package swift_proto_testing.generated;
enum GeneratedSwiftReservedEnum {
  NONE = 0;
  adjusted = 1;
  aggregateValue = 2;
  allCases = 3;
  allowAlias = 4;
  alwaysPrintEnumsAsInts = 5;
  alwaysPrintInt64sAsNumbers = 6;
  annotation = 7;
  any = 8;
  AnyExtensionField = 9;
  AnyMessageExtension = 10;
  AnyMessageStorage = 11;
  AnyUnpackError = 12;
  Api = 13;
  appended = 14;
  appendUIntHex = 15;
  appendUnknown = 16;
  areAllInitialized = 17;
  Array = 18;
  arrayDepth = 19;
  arrayLiteral = 20;
  arraySeparator = 21;
  as = 22;
  asciiOpenCurlyBracket = 23;
  asciiZero = 24;
  async = 25;
  AsyncIterator = 26;
  AsyncIteratorProtocol = 27;
  AsyncMessageSequence = 28;
  available = 29;
  b = 30;
  Base = 31;
  base64Values = 32;
  baseAddress = 33;
  BaseType = 34;
  begin = 35;
  binary = 36;
  BinaryDecoder = 37;
  BinaryDecoding = 38;
  BinaryDecodingError = 39;
  BinaryDecodingOptions = 40;
  BinaryDelimited = 41;
  BinaryEncoder = 42;
  BinaryEncodingError = 43;
  BinaryEncodingMessageSetSizeVisitor = 44;
  BinaryEncodingMessageSetVisitor = 45;
  BinaryEncodingOptions = 46;
  BinaryEncodingSizeVisitor = 47;
  BinaryEncodingVisitor = 48;
  binaryOptions = 49;
  binaryProtobufDelimitedMessages = 50;
  BinaryStreamDecoding = 51;
  binaryStreamDecodingError = 52;
  bitPattern = 53;
  body = 54;
  Bool = 55;
  booleanLiteral = 56;
  BooleanLiteralType = 57;
  boolValue = 58;
  buffer = 59;
  bytes = 60;
  bytesInGroup = 61;
  bytesNeeded = 62;
  bytesRead = 63;
  BytesValue = 64;
  c = 65;
  capitalizeNext = 66;
  cardinality = 67;
  CaseIterable = 68;
  ccEnableArenas = 69;
  ccGenericServices = 70;
  Character = 71;
  chars = 72;
  chunk = 73;
  class = 74;
  clearAggregateValue = 75;
  clearAllowAlias = 76;
  clearBegin = 77;
  clearCcEnableArenas = 78;
  clearCcGenericServices = 79;
  clearClientStreaming = 80;
  clearCsharpNamespace = 81;
  clearCtype = 82;
  clearDebugRedact = 83;
  clearDefaultValue = 84;
  clearDeprecated = 85;
  clearDeprecatedLegacyJsonFieldConflicts = 86;
  clearDeprecationWarning = 87;
  clearDoubleValue = 88;
  clearEdition = 89;
  clearEditionDeprecated = 90;
  clearEditionIntroduced = 91;
  clearEditionRemoved = 92;
  clearEnd = 93;
  clearEnumType = 94;
  clearExtendee = 95;
  clearExtensionValue = 96;
  clearFeatures = 97;
  clearFeatureSupport = 98;
  clearFieldPresence = 99;
  clearFixedFeatures = 100;
  clearFullName = 101;
  clearGoPackage = 102;
  clearIdempotencyLevel = 103;
  clearIdentifierValue = 104;
  clearInputType = 105;
  clearIsExtension = 106;
  clearJavaGenerateEqualsAndHash = 107;
  clearJavaGenericServices = 108;
  clearJavaMultipleFiles = 109;
  clearJavaOuterClassname = 110;
  clearJavaPackage = 111;
  clearJavaStringCheckUtf8 = 112;
  clearJsonFormat = 113;
  clearJsonName = 114;
  clearJstype = 115;
  clearLabel = 116;
  clearLazy = 117;
  clearLeadingComments = 118;
  clearMapEntry = 119;
  clearMaximumEdition = 120;
  clearMessageEncoding = 121;
  clearMessageSetWireFormat = 122;
  clearMinimumEdition = 123;
  clearName = 124;
  clearNamePart = 125;
  clearNegativeIntValue = 126;
  clearNoStandardDescriptorAccessor = 127;
  clearNumber = 128;
  clearObjcClassPrefix = 129;
  clearOneofIndex = 130;
  clearOptimizeFor = 131;
  clearOptions = 132;
  clearOutputType = 133;
  clearOverridableFeatures = 134;
  clearPackage = 135;
  clearPacked = 136;
  clearPhpClassPrefix = 137;
  clearPhpMetadataNamespace = 138;
  clearPhpNamespace = 139;
  clearPositiveIntValue = 140;
  clearProto3Optional = 141;
  clearPyGenericServices = 142;
  clearRepeated = 143;
  clearRepeatedFieldEncoding = 144;
  clearReserved = 145;
  clearRetention = 146;
  clearRubyPackage = 147;
  clearSemantic = 148;
  clearServerStreaming = 149;
  clearSourceCodeInfo = 150;
  clearSourceContext = 151;
  clearSourceFile = 152;
  clearStart = 153;
  clearStringValue = 154;
  clearSwiftPrefix = 155;
  clearSyntax = 156;
  clearTrailingComments = 157;
  clearType = 158;
  clearTypeName = 159;
  clearUnverifiedLazy = 160;
  clearUtf8Validation = 161;
  clearValue = 162;
  clearVerification = 163;
  clearWeak = 164;
  clientStreaming = 165;
  code = 166;
  codePoint = 167;
  codeUnits = 168;
  Collection = 169;
  com = 170;
  comma = 171;
  consumedBytes = 172;
  contentsOf = 173;
  copy = 174;
  count = 175;
  countVarintsInBuffer = 176;
  csharpNamespace = 177;
  ctype = 178;
  customCodable = 179;
  CustomDebugStringConvertible = 180;
  CustomStringConvertible = 181;
  d = 182;
  Data = 183;
  dataResult = 184;
  date = 185;
  daySec = 186;
  daysSinceEpoch = 187;
  debugDescription = 188;
  debugRedact = 189;
  declaration = 190;
  decoded = 191;
  decodedFromJSONNull = 192;
  decodeExtensionField = 193;
  decodeExtensionFieldsAsMessageSet = 194;
  decodeJSON = 195;
  decodeMapField = 196;
  decodeMessage = 197;
  decoder = 198;
  decodeRepeated = 199;
  decodeRepeatedBoolField = 200;
  decodeRepeatedBytesField = 201;
  decodeRepeatedDoubleField = 202;
  decodeRepeatedEnumField = 203;
  decodeRepeatedFixed32Field = 204;
  decodeRepeatedFixed64Field = 205;
  decodeRepeatedFloatField = 206;
  decodeRepeatedGroupField = 207;
  decodeRepeatedInt32Field = 208;
  decodeRepeatedInt64Field = 209;
  decodeRepeatedMessageField = 210;
  decodeRepeatedSFixed32Field = 211;
  decodeRepeatedSFixed64Field = 212;
  decodeRepeatedSInt32Field = 213;
  decodeRepeatedSInt64Field = 214;
  decodeRepeatedStringField = 215;
  decodeRepeatedUInt32Field = 216;
  decodeRepeatedUInt64Field = 217;
  decodeSingular = 218;
  decodeSingularBoolField = 219;
  decodeSingularBytesField = 220;
  decodeSingularDoubleField = 221;
  decodeSingularEnumField = 222;
  decodeSingularFixed32Field = 223;
  decodeSingularFixed64Field = 224;
  decodeSingularFloatField = 225;
  decodeSingularGroupField = 226;
  decodeSingularInt32Field = 227;
  decodeSingularInt64Field = 228;
  decodeSingularMessageField = 229;
  decodeSingularSFixed32Field = 230;
  decodeSingularSFixed64Field = 231;
  decodeSingularSInt32Field = 232;
  decodeSingularSInt64Field = 233;
  decodeSingularStringField = 234;
  decodeSingularUInt32Field = 235;
  decodeSingularUInt64Field = 236;
  decodeTextFormat = 237;
  defaultAnyTypeURLPrefix = 238;
  defaults = 239;
  defaultValue = 240;
  dependency = 241;
  deprecated = 242;
  deprecatedLegacyJsonFieldConflicts = 243;
  deprecationWarning = 244;
  description = 245;
  DescriptorProto = 246;
  Dictionary = 247;
  dictionaryLiteral = 248;
  digit = 249;
  digit0 = 250;
  digit1 = 251;
  digitCount = 252;
  digits = 253;
  digitValue = 254;
  discardableResult = 255;
  discardUnknownFields = 256;
  Double = 257;
  doubleValue = 258;
  Duration = 259;
  E = 260;
  edition = 261;
  EditionDefault = 262;
  editionDefaults = 263;
  editionDeprecated = 264;
  editionIntroduced = 265;
  editionRemoved = 266;
  Element = 267;
  elements = 268;
  emitExtensionFieldName = 269;
  emitFieldName = 270;
  emitFieldNumber = 271;
  Empty = 272;
  encodeAsBytes = 273;
  encoded = 274;
  encodedJSONString = 275;
  encodedSize = 276;
  encodeField = 277;
  encoder = 278;
  end = 279;
  endArray = 280;
  endMessageField = 281;
  endObject = 282;
  endRegularField = 283;
  enum = 284;
  EnumDescriptorProto = 285;
  EnumOptions = 286;
  EnumReservedRange = 287;
  enumType = 288;
  enumvalue = 289;
  EnumValueDescriptorProto = 290;
  EnumValueOptions = 291;
  Equatable = 292;
  Error = 293;
  ExpressibleByArrayLiteral = 294;
  ExpressibleByDictionaryLiteral = 295;
  ext = 296;
  extDecoder = 297;
  extendedGraphemeClusterLiteral = 298;
  ExtendedGraphemeClusterLiteralType = 299;
  extendee = 300;
  ExtensibleMessage = 301;
  extension = 302;
  ExtensionField = 303;
  extensionFieldNumber = 304;
  ExtensionFieldValueSet = 305;
  ExtensionMap = 306;
  extensionRange = 307;
  ExtensionRangeOptions = 308;
  extensions = 309;
  extras = 310;
  F = 311;
  false = 312;
  features = 313;
  FeatureSet = 314;
  FeatureSetDefaults = 315;
  FeatureSetEditionDefault = 316;
  featureSupport = 317;
  field = 318;
  fieldData = 319;
  FieldDescriptorProto = 320;
  FieldMask = 321;
  fieldName = 322;
  fieldNameCount = 323;
  fieldNum = 324;
  fieldNumber = 325;
  fieldNumberForProto = 326;
  FieldOptions = 327;
  fieldPresence = 328;
  fields = 329;
  fieldSize = 330;
  FieldTag = 331;
  fieldType = 332;
  file = 333;
  FileDescriptorProto = 334;
  FileDescriptorSet = 335;
  fileName = 336;
  FileOptions = 337;
  filter = 338;
  final = 339;
  finiteOnly = 340;
  first = 341;
  firstItem = 342;
  fixedFeatures = 343;
  Float = 344;
  floatLiteral = 345;
  FloatLiteralType = 346;
  FloatValue = 347;
  forMessageName = 348;
  formUnion = 349;
  forReadingFrom = 350;
  forTypeURL = 351;
  ForwardParser = 352;
  forWritingInto = 353;
  from = 354;
  fromAscii2 = 355;
  fromAscii4 = 356;
  fromByteOffset = 357;
  fromHexDigit = 358;
  fullName = 359;
  func = 360;
  function = 361;
  G = 362;
  GeneratedCodeInfo = 363;
  get = 364;
  getExtensionValue = 365;
  googleapis = 366;
  Google_Protobuf_Any = 367;
  Google_Protobuf_Api = 368;
  Google_Protobuf_BoolValue = 369;
  Google_Protobuf_BytesValue = 370;
  Google_Protobuf_DescriptorProto = 371;
  Google_Protobuf_DoubleValue = 372;
  Google_Protobuf_Duration = 373;
  Google_Protobuf_Edition = 374;
  Google_Protobuf_Empty = 375;
  Google_Protobuf_Enum = 376;
  Google_Protobuf_EnumDescriptorProto = 377;
  Google_Protobuf_EnumOptions = 378;
  Google_Protobuf_EnumValue = 379;
  Google_Protobuf_EnumValueDescriptorProto = 380;
  Google_Protobuf_EnumValueOptions = 381;
  Google_Protobuf_ExtensionRangeOptions = 382;
  Google_Protobuf_FeatureSet = 383;
  Google_Protobuf_FeatureSetDefaults = 384;
  Google_Protobuf_Field = 385;
  Google_Protobuf_FieldDescriptorProto = 386;
  Google_Protobuf_FieldMask = 387;
  Google_Protobuf_FieldOptions = 388;
  Google_Protobuf_FileDescriptorProto = 389;
  Google_Protobuf_FileDescriptorSet = 390;
  Google_Protobuf_FileOptions = 391;
  Google_Protobuf_FloatValue = 392;
  Google_Protobuf_GeneratedCodeInfo = 393;
  Google_Protobuf_Int32Value = 394;
  Google_Protobuf_Int64Value = 395;
  Google_Protobuf_ListValue = 396;
  Google_Protobuf_MessageOptions = 397;
  Google_Protobuf_Method = 398;
  Google_Protobuf_MethodDescriptorProto = 399;
  Google_Protobuf_MethodOptions = 400;
  Google_Protobuf_Mixin = 401;
  Google_Protobuf_NullValue = 402;
  Google_Protobuf_OneofDescriptorProto = 403;
  Google_Protobuf_OneofOptions = 404;
  Google_Protobuf_Option = 405;
  Google_Protobuf_ServiceDescriptorProto = 406;
  Google_Protobuf_ServiceOptions = 407;
  Google_Protobuf_SourceCodeInfo = 408;
  Google_Protobuf_SourceContext = 409;
  Google_Protobuf_StringValue = 410;
  Google_Protobuf_Struct = 411;
  Google_Protobuf_Syntax = 412;
  Google_Protobuf_Timestamp = 413;
  Google_Protobuf_Type = 414;
  Google_Protobuf_UInt32Value = 415;
  Google_Protobuf_UInt64Value = 416;
  Google_Protobuf_UninterpretedOption = 417;
  Google_Protobuf_Value = 418;
  goPackage = 419;
  group = 420;
  groupFieldNumberStack = 421;
  groupSize = 422;
  hadOneofValue = 423;
  handleConflictingOneOf = 424;
  hasAggregateValue = 425;
  hasAllowAlias = 426;
  hasBegin = 427;
  hasCcEnableArenas = 428;
  hasCcGenericServices = 429;
  hasClientStreaming = 430;
  hasCsharpNamespace = 431;
  hasCtype = 432;
  hasDebugRedact = 433;
  hasDefaultValue = 434;
  hasDeprecated = 435;
  hasDeprecatedLegacyJsonFieldConflicts = 436;
  hasDeprecationWarning = 437;
  hasDoubleValue = 438;
  hasEdition = 439;
  hasEditionDeprecated = 440;
  hasEditionIntroduced = 441;
  hasEditionRemoved = 442;
  hasEnd = 443;
  hasEnumType = 444;
  hasExtendee = 445;
  hasExtensionValue = 446;
  hasFeatures = 447;
  hasFeatureSupport = 448;
  hasFieldPresence = 449;
  hasFixedFeatures = 450;
  hasFullName = 451;
  hasGoPackage = 452;
  hash = 453;
  Hashable = 454;
  hasher = 455;
  HashVisitor = 456;
  hasIdempotencyLevel = 457;
  hasIdentifierValue = 458;
  hasInputType = 459;
  hasIsExtension = 460;
  hasJavaGenerateEqualsAndHash = 461;
  hasJavaGenericServices = 462;
  hasJavaMultipleFiles = 463;
  hasJavaOuterClassname = 464;
  hasJavaPackage = 465;
  hasJavaStringCheckUtf8 = 466;
  hasJsonFormat = 467;
  hasJsonName = 468;
  hasJstype = 469;
  hasLabel = 470;
  hasLazy = 471;
  hasLeadingComments = 472;
  hasMapEntry = 473;
  hasMaximumEdition = 474;
  hasMessageEncoding = 475;
  hasMessageSetWireFormat = 476;
  hasMinimumEdition = 477;
  hasName = 478;
  hasNamePart = 479;
  hasNegativeIntValue = 480;
  hasNoStandardDescriptorAccessor = 481;
  hasNumber = 482;
  hasObjcClassPrefix = 483;
  hasOneofIndex = 484;
  hasOptimizeFor = 485;
  hasOptions = 486;
  hasOutputType = 487;
  hasOverridableFeatures = 488;
  hasPackage = 489;
  hasPacked = 490;
  hasPhpClassPrefix = 491;
  hasPhpMetadataNamespace = 492;
  hasPhpNamespace = 493;
  hasPositiveIntValue = 494;
  hasProto3Optional = 495;
  hasPyGenericServices = 496;
  hasRepeated = 497;
  hasRepeatedFieldEncoding = 498;
  hasReserved = 499;
  hasRetention = 500;
  hasRubyPackage = 501;
  hasSemantic = 502;
  hasServerStreaming = 503;
  hasSourceCodeInfo = 504;
  hasSourceContext = 505;
  hasSourceFile = 506;
  hasStart = 507;
  hasStringValue = 508;
  hasSwiftPrefix = 509;
  hasSyntax = 510;
  hasTrailingComments = 511;
  hasType = 512;
  hasTypeName = 513;
  hasUnverifiedLazy = 514;
  hasUtf8Validation = 515;
  hasValue = 516;
  hasVerification = 517;
  hasWeak = 518;
  hour = 519;
  i = 520;
  idempotencyLevel = 521;
  identifierValue = 522;
  if = 523;
  ignoreUnknownExtensionFields = 524;
  ignoreUnknownFields = 525;
  index = 526;
  init = 527;
  inout = 528;
  inputType = 529;
  insert = 530;
  Int = 531;
  Int32 = 532;
  Int32Value = 533;
  Int64 = 534;
  Int64Value = 535;
  Int8 = 536;
  integerLiteral = 537;
  IntegerLiteralType = 538;
  intern = 539;
  Internal = 540;
  InternalState = 541;
  into = 542;
  ints = 543;
  isA = 544;
  isEqual = 545;
  isEqualTo = 546;
  isExtension = 547;
  isInitialized = 548;
  isNegative = 549;
  itemTagsEncodedSize = 550;
  iterator = 551;
  javaGenerateEqualsAndHash = 552;
  javaGenericServices = 553;
  javaMultipleFiles = 554;
  javaOuterClassname = 555;
  javaPackage = 556;
  javaStringCheckUtf8 = 557;
  JSONDecoder = 558;
  JSONDecodingError = 559;
  JSONDecodingOptions = 560;
  jsonEncoder = 561;
  JSONEncodingError = 562;
  JSONEncodingOptions = 563;
  JSONEncodingVisitor = 564;
  jsonFormat = 565;
  JSONMapEncodingVisitor = 566;
  jsonName = 567;
  jsonPath = 568;
  jsonPaths = 569;
  JSONScanner = 570;
  jsonString = 571;
  jsonText = 572;
  jsonUTF8Bytes = 573;
  jsonUTF8Data = 574;
  jstype = 575;
  k = 576;
  kChunkSize = 577;
  Key = 578;
  keyField = 579;
  keyFieldOpt = 580;
  KeyType = 581;
  kind = 582;
  l = 583;
  label = 584;
  lazy = 585;
  leadingComments = 586;
  leadingDetachedComments = 587;
  length = 588;
  lessThan = 589;
  let = 590;
  lhs = 591;
  line = 592;
  list = 593;
  listOfMessages = 594;
  listValue = 595;
  littleEndian = 596;
  load = 597;
  localHasher = 598;
  location = 599;
  M = 600;
  major = 601;
  makeAsyncIterator = 602;
  makeIterator = 603;
  malformedLength = 604;
  mapEntry = 605;
  MapKeyType = 606;
  mapToMessages = 607;
  MapValueType = 608;
  mapVisitor = 609;
  maximumEdition = 610;
  mdayStart = 611;
  merge = 612;
  message = 613;
  messageDepthLimit = 614;
  messageEncoding = 615;
  MessageExtension = 616;
  MessageImplementationBase = 617;
  MessageOptions = 618;
  MessageSet = 619;
  messageSetWireFormat = 620;
  messageSize = 621;
  messageType = 622;
  Method = 623;
  MethodDescriptorProto = 624;
  MethodOptions = 625;
  methods = 626;
  min = 627;
  minimumEdition = 628;
  minor = 629;
  Mixin = 630;
  mixins = 631;
  modifier = 632;
  modify = 633;
  month = 634;
  msgExtension = 635;
  mutating = 636;
  n = 637;
  name = 638;
  NameDescription = 639;
  NameMap = 640;
  NamePart = 641;
  names = 642;
  nanos = 643;
  negativeIntValue = 644;
  nestedType = 645;
  newL = 646;
  newList = 647;
  newValue = 648;
  next = 649;
  nextByte = 650;
  nextFieldNumber = 651;
  nextVarInt = 652;
  nil = 653;
  nilLiteral = 654;
  noBytesAvailable = 655;
  noStandardDescriptorAccessor = 656;
  nullValue = 657;
  number = 658;
  numberValue = 659;
  objcClassPrefix = 660;
  of = 661;
  oneofDecl = 662;
  OneofDescriptorProto = 663;
  oneofIndex = 664;
  OneofOptions = 665;
  oneofs = 666;
  OneOf_Kind = 667;
  optimizeFor = 668;
  OptimizeMode = 669;
  Option = 670;
  OptionalEnumExtensionField = 671;
  OptionalExtensionField = 672;
  OptionalGroupExtensionField = 673;
  OptionalMessageExtensionField = 674;
  OptionRetention = 675;
  options = 676;
  OptionTargetType = 677;
  other = 678;
  others = 679;
  out = 680;
  outputType = 681;
  overridableFeatures = 682;
  p = 683;
  package = 684;
  packed = 685;
  PackedEnumExtensionField = 686;
  PackedExtensionField = 687;
  padding = 688;
  parent = 689;
  parse = 690;
  path = 691;
  paths = 692;
  payload = 693;
  payloadSize = 694;
  phpClassPrefix = 695;
  phpMetadataNamespace = 696;
  phpNamespace = 697;
  pos = 698;
  positiveIntValue = 699;
  prefix = 700;
  preserveProtoFieldNames = 701;
  preTraverse = 702;
  printUnknownFields = 703;
  proto2 = 704;
  proto3DefaultValue = 705;
  proto3Optional = 706;
  ProtobufAPIVersionCheck = 707;
  ProtobufAPIVersion_3 = 708;
  ProtobufBool = 709;
  ProtobufBytes = 710;
  ProtobufDouble = 711;
  ProtobufEnumMap = 712;
  protobufExtension = 713;
  ProtobufFixed32 = 714;
  ProtobufFixed64 = 715;
  ProtobufFloat = 716;
  ProtobufInt32 = 717;
  ProtobufInt64 = 718;
  ProtobufMap = 719;
  ProtobufMessageMap = 720;
  ProtobufSFixed32 = 721;
  ProtobufSFixed64 = 722;
  ProtobufSInt32 = 723;
  ProtobufSInt64 = 724;
  ProtobufString = 725;
  ProtobufUInt32 = 726;
  ProtobufUInt64 = 727;
  protobuf_extensionFieldValues = 728;
  protobuf_fieldNumber = 729;
  protobuf_generated_isEqualTo = 730;
  protobuf_nameMap = 731;
  protobuf_newField = 732;
  protobuf_package = 733;
  protocol = 734;
  protoFieldName = 735;
  protoMessageName = 736;
  ProtoNameProviding = 737;
  protoPaths = 738;
  public = 739;
  publicDependency = 740;
  putBoolValue = 741;
  putBytesValue = 742;
  putDoubleValue = 743;
  putEnumValue = 744;
  putFixedUInt32 = 745;
  putFixedUInt64 = 746;
  putFloatValue = 747;
  putInt64 = 748;
  putStringValue = 749;
  putUInt64 = 750;
  putUInt64Hex = 751;
  putVarInt = 752;
  putZigZagVarInt = 753;
  pyGenericServices = 754;
  R = 755;
  rawChars = 756;
  RawRepresentable = 757;
  RawValue = 758;
  read4HexDigits = 759;
  readBytes = 760;
  register = 761;
  repeated = 762;
  RepeatedEnumExtensionField = 763;
  RepeatedExtensionField = 764;
  repeatedFieldEncoding = 765;
  RepeatedGroupExtensionField = 766;
  RepeatedMessageExtensionField = 767;
  repeating = 768;
  requestStreaming = 769;
  requestTypeURL = 770;
  requiredSize = 771;
  responseStreaming = 772;
  responseTypeURL = 773;
  result = 774;
  retention = 775;
  rethrows = 776;
  return = 777;
  ReturnType = 778;
  revision = 779;
  rhs = 780;
  root = 781;
  rubyPackage = 782;
  s = 783;
  sawBackslash = 784;
  sawSection4Characters = 785;
  sawSection5Characters = 786;
  scan = 787;
  scanner = 788;
  seconds = 789;
  self = 790;
  semantic = 791;
  Sendable = 792;
  separator = 793;
  serialize = 794;
  serializedBytes = 795;
  serializedData = 796;
  serializedSize = 797;
  serverStreaming = 798;
  service = 799;
  ServiceDescriptorProto = 800;
  ServiceOptions = 801;
  set = 802;
  setExtensionValue = 803;
  shift = 804;
  SimpleExtensionMap = 805;
  size = 806;
  sizer = 807;
  source = 808;
  sourceCodeInfo = 809;
  sourceContext = 810;
  sourceEncoding = 811;
  sourceFile = 812;
  SourceLocation = 813;
  span = 814;
  split = 815;
  start = 816;
  startArray = 817;
  startArrayObject = 818;
  startField = 819;
  startIndex = 820;
  startMessageField = 821;
  startObject = 822;
  startRegularField = 823;
  state = 824;
  static = 825;
  StaticString = 826;
  storage = 827;
  String = 828;
  stringLiteral = 829;
  StringLiteralType = 830;
  stringResult = 831;
  stringValue = 832;
  struct = 833;
  structValue = 834;
  subDecoder = 835;
  subscript = 836;
  subVisitor = 837;
  Swift = 838;
  swiftPrefix = 839;
  SwiftProtobufContiguousBytes = 840;
  SwiftProtobufError = 841;
  syntax = 842;
  T = 843;
  tag = 844;
  targets = 845;
  terminator = 846;
  testDecoder = 847;
  text = 848;
  textDecoder = 849;
  TextFormatDecoder = 850;
  TextFormatDecodingError = 851;
  TextFormatDecodingOptions = 852;
  TextFormatEncodingOptions = 853;
  TextFormatEncodingVisitor = 854;
  textFormatString = 855;
  throwOrIgnore = 856;
  throws = 857;
  timeInterval = 858;
  timeIntervalSince1970 = 859;
  timeIntervalSinceReferenceDate = 860;
  Timestamp = 861;
  tooLarge = 862;
  total = 863;
  totalArrayDepth = 864;
  totalSize = 865;
  trailingComments = 866;
  traverse = 867;
  true = 868;
  try = 869;
  type = 870;
  typealias = 871;
  TypeEnum = 872;
  typeName = 873;
  typePrefix = 874;
  typeStart = 875;
  typeUnknown = 876;
  typeURL = 877;
  UInt32 = 878;
  UInt32Value = 879;
  UInt64 = 880;
  UInt64Value = 881;
  UInt8 = 882;
  unchecked = 883;
  unicodeScalarLiteral = 884;
  UnicodeScalarLiteralType = 885;
  unicodeScalars = 886;
  UnicodeScalarView = 887;
  uninterpretedOption = 888;
  union = 889;
  uniqueStorage = 890;
  unknown = 891;
  unknownFields = 892;
  UnknownStorage = 893;
  unpackTo = 894;
  UnsafeBufferPointer = 895;
  UnsafeMutablePointer = 896;
  UnsafeMutableRawBufferPointer = 897;
  UnsafeRawBufferPointer = 898;
  UnsafeRawPointer = 899;
  unverifiedLazy = 900;
  updatedOptions = 901;
  url = 902;
  useDeterministicOrdering = 903;
  utf8 = 904;
  utf8Ptr = 905;
  utf8ToDouble = 906;
  utf8Validation = 907;
  UTF8View = 908;
  v = 909;
  value = 910;
  valueField = 911;
  values = 912;
  ValueType = 913;
  var = 914;
  verification = 915;
  VerificationState = 916;
  Version = 917;
  versionString = 918;
  visitExtensionFields = 919;
  visitExtensionFieldsAsMessageSet = 920;
  visitMapField = 921;
  visitor = 922;
  visitPacked = 923;
  visitPackedBoolField = 924;
  visitPackedDoubleField = 925;
  visitPackedEnumField = 926;
  visitPackedFixed32Field = 927;
  visitPackedFixed64Field = 928;
  visitPackedFloatField = 929;
  visitPackedInt32Field = 930;
  visitPackedInt64Field = 931;
  visitPackedSFixed32Field = 932;
  visitPackedSFixed64Field = 933;
  visitPackedSInt32Field = 934;
  visitPackedSInt64Field = 935;
  visitPackedUInt32Field = 936;
  visitPackedUInt64Field = 937;
  visitRepeated = 938;
  visitRepeatedBoolField = 939;
  visitRepeatedBytesField = 940;
  visitRepeatedDoubleField = 941;
  visitRepeatedEnumField = 942;
  visitRepeatedFixed32Field = 943;
  visitRepeatedFixed64Field = 944;
  visitRepeatedFloatField = 945;
  visitRepeatedGroupField = 946;
  visitRepeatedInt32Field = 947;
  visitRepeatedInt64Field = 948;
  visitRepeatedMessageField = 949;
  visitRepeatedSFixed32Field = 950;
  visitRepeatedSFixed64Field = 951;
  visitRepeatedSInt32Field = 952;
  visitRepeatedSInt64Field = 953;
  visitRepeatedStringField = 954;
  visitRepeatedUInt32Field = 955;
  visitRepeatedUInt64Field = 956;
  visitSingular = 957;
  visitSingularBoolField = 958;
  visitSingularBytesField = 959;
  visitSingularDoubleField = 960;
  visitSingularEnumField = 961;
  visitSingularFixed32Field = 962;
  visitSingularFixed64Field = 963;
  visitSingularFloatField = 964;
  visitSingularGroupField = 965;
  visitSingularInt32Field = 966;
  visitSingularInt64Field = 967;
  visitSingularMessageField = 968;
  visitSingularSFixed32Field = 969;
  visitSingularSFixed64Field = 970;
  visitSingularSInt32Field = 971;
  visitSingularSInt64Field = 972;
  visitSingularStringField = 973;
  visitSingularUInt32Field = 974;
  visitSingularUInt64Field = 975;
  visitUnknown = 976;
  wasDecoded = 977;
  weak = 978;
  weakDependency = 979;
  where = 980;
  wireFormat = 981;
  with = 982;
  withUnsafeBytes = 983;
  withUnsafeMutableBytes = 984;
  work = 985;
  Wrapped = 986;
  WrappedType = 987;
  wrappedValue = 988;
  written = 989;
  yday = 990;
}
